--- a/choropleth-generation/choropleth-generation.ipynb
+++ b/choropleth-generation/choropleth-generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "java.net.URLEncoder"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,8 @@
     "         '[clojure.java.io :as io]\n",
     "         '[clojure.data.csv :as csv]\n",
     "         '[clj-http.client :as http]\n",
-    "         '[oz.notebook.clojupyter :as oz])\n",
+    "         '[oz.notebook.clojupyter :as oz]\n",
+    "         '[oz.core :as ozcore])\n",
     "(import 'java.net.URLEncoder)"
    ]
   },
@@ -291,15 +292,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to-format: :html\n",
+      "[I 10:10:57.316 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/77ff2691-c815-4844-86e9-558790f576543235006439632792951.vl.json\n",
+      "[I 10:10:57.317 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/b9b3a665-a650-4604-b8dc-6dc6ca43ae084578675571710206040.png\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
        "  <div>\n",
-       "    <div id='uuid-25786125-b40c-43ce-a0ce-1eb9dbd26649'></div>\n",
+       "    <div id='uuid-bc400b47-f141-4134-a713-be828ac67853'></div>\n",
        "    <script>\n",
        "    requirejs.config({\n",
        "      baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -311,8 +321,8 @@
        "      }\n",
        "    });\n",
        "    require(['vega-embed'], function(vegaEmbed) {\n",
-       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"width\":\"600\",\"height\":\"600\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"values\":[{\"council\":\"Clackmannanshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.508210116731517509727626\",\"councilCode\":\"S12000005\"},{\"council\":\"Dumfries and Galloway\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.533133947173869211640567\",\"councilCode\":\"S12000006\"},{\"council\":\"East Ayrshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.436211424819435325016415\",\"councilCode\":\"S12000008\"},{\"council\":\"East Lothian\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.473901124870025522261083\",\"councilCode\":\"S12000010\"},{\"council\":\"East Renfrewshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.461563517915309446254072\",\"councilCode\":\"S12000011\"},{\"council\":\"Na h-Eileanan Siar\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.533917256802087215803205\",\"councilCode\":\"S12000013\"},{\"council\":\"Falkirk\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.427659972558313583634776\",\"councilCode\":\"S12000014\"},{\"council\":\"Highland\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.542922645835102318077609\",\"councilCode\":\"S12000017\"},{\"council\":\"Inverclyde\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.358630838131797824696097\",\"councilCode\":\"S12000018\"},{\"council\":\"Midlothian\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.458616159404423034814977\",\"councilCode\":\"S12000019\"},{\"council\":\"Moray\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.497508375209380234505863\",\"councilCode\":\"S12000020\"},{\"council\":\"North Ayrshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.454028681253696037847428\",\"councilCode\":\"S12000021\"},{\"council\":\"Orkney Islands\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.460612888688598467778279\",\"councilCode\":\"S12000023\"},{\"council\":\"Scottish Borders\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.455374338509586188947688\",\"councilCode\":\"S12000026\"},{\"council\":\"Shetland Islands\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.419704219225750326228795\",\"councilCode\":\"S12000027\"},{\"council\":\"South Ayrshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.495904042647712127943136\",\"councilCode\":\"S12000028\"},{\"council\":\"South Lanarkshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.471663218606983888157482\",\"councilCode\":\"S12000029\"},{\"council\":\"Stirling\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.444450333934061274249973\",\"councilCode\":\"S12000030\"},{\"council\":\"Aberdeen City\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.375900861311302513622781\",\"councilCode\":\"S12000033\"},{\"council\":\"Aberdeenshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.46092859601483917849084\",\"councilCode\":\"S12000034\"},{\"council\":\"Argyll and Bute\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.55613262230466032923719\",\"councilCode\":\"S12000035\"},{\"council\":\"City of Edinburgh\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.372885245901639344262295\",\"councilCode\":\"S12000036\"},{\"council\":\"Renfrewshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.457027954328139940379099\",\"councilCode\":\"S12000038\"},{\"council\":\"West Dunbartonshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.469729608437114327386963\",\"councilCode\":\"S12000039\"},{\"council\":\"West Lothian\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.407345997584275831777753\",\"councilCode\":\"S12000040\"},{\"council\":\"Angus\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.470691140985866942433644\",\"councilCode\":\"S12000041\"},{\"council\":\"Dundee City\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.40855798319327731092437\",\"councilCode\":\"S12000042\"},{\"council\":\"East Dunbartonshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.476719283670266777439306\",\"councilCode\":\"S12000045\"},{\"council\":\"Fife\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.449982522653330106746256\",\"councilCode\":\"S12000047\"},{\"council\":\"Perth and Kinross\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.474684380990151364928283\",\"councilCode\":\"S12000048\"},{\"council\":\"Glasgow City\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.391625293338228955476445\",\"councilCode\":\"S12000049\"},{\"council\":\"North Lanarkshire\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.429698982891410429772473\",\"councilCode\":\"S12000050\"},{\"council\":\"Scotland\",\"year\":\"2018\",\"tonnagePerCitizen\":\"0.44229528695684154392159\",\"councilCode\":\"S92000003\"}]},\"key\":\"council\",\"fields\":[\"tonnagePerCitizen\"]}}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"title\":\"tonnage per citizen\",\"field\":\"tonnagePerCitizen\",\"type\":\"quantitative\"}],\"color\":{\"title\":\"tonnage per citizen\",\"field\":\"tonnagePerCitizen\",\"type\":\"quantitative\"}}};\n",
-       "      vegaEmbed('#uuid-25786125-b40c-43ce-a0ce-1eb9dbd26649', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"width\":\"600\",\"height\":\"600\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/tonnage-generated-per-council-citizen-in-2018.csv\"},\"key\":\"council\",\"fields\":[\"tonnagePerCitizen\"]}}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"title\":\"tonnage per citizen\",\"field\":\"tonnagePerCitizen\",\"type\":\"quantitative\"}],\"color\":{\"title\":\"tonnage per citizen\",\"field\":\"tonnagePerCitizen\",\"type\":\"quantitative\"}}};\n",
+       "      vegaEmbed('#uuid-bc400b47-f141-4134-a713-be828ac67853', spec, {defaultStyle:true}).catch(console.warn);\n",
        "      }, function(err) {\n",
        "      console.log('Failed to load');\n",
        "    });\n",
@@ -321,7 +331,7 @@
        "    "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,18 +339,18 @@
    "source": [
     "; Choropleth of the waste generated per council citizen in 2018\n",
     "\n",
-    "(def repo- \"https://raw.githubusercontent.com/data-commons-scotland/dcs-shorts/topojson-experiment/choropleth-generation/\")\n",
+    "(def repo-dir \"https://raw.githubusercontent.com/data-commons-scotland/dcs-shorts/topojson-experiment/choropleth-generation/\")\n",
     "\n",
     "(def chart-spec {:$schema \"https://vega.github.io/schema/vega-lite/v4.json\"\n",
     "                 :width \"600\"\n",
     "                 :height \"600\"\n",
-    "                 :data {:url \"https://raw.githubusercontent.com/data-commons-scotland/dcs-shorts/topojson-experiment/choropleth-generation/topo_lad.json\"\n",
+    "                 :data {:url (str repo-dir \"topo_lad.json\")\n",
     "                        :format {:type \"topojson\"\n",
     "                                 :feature \"lad\"}}\n",
     "                 :transform [;; Cross reference by council name rather than council code\n",
     "                             ;; because the topoJSON data uses some obsolete codes (etc.).\n",
     "                             {:lookup \"properties['LAD13NM']\" \n",
-    "                              :from {:data {:url (str url-stem \"\")}\n",
+    "                              :from {:data {:url (str repo-dir filename)}\n",
     "                                     :key \"council\"\n",
     "                                     :fields [\"tonnagePerCitizen\"]}}]\n",
     "                 :projection {:type \"albers\" \n",
@@ -356,7 +366,7 @@
     "\n",
     "; (print (json/write-str chart-spec))\n",
     "\n",
-    "; Aside: read https://github.com/metasoarous/oz for exporting and embedding and reagent hints\n",
+    "; (ozcore/export! [:div [:vega-lite chart-spec]] \"choropleth.html\" {:from-format :hiccup :to-format :html})\n",
     "\n",
     "(oz/view! chart-spec)"
    ]
