now generates a usable triple choropleth

--- a/choropleth-generation/choropleth-generation.ipynb
+++ b/choropleth-generation/choropleth-generation.ipynb
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "; Query for the waste tonnage genearated per council citizen per year\n",
+    "; Query for the waste tonnage generated per council citizen per year\n",
     "\n",
     "(def sparql \"\n",
     "\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -198,38 +198,66 @@
        "nil"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; 2018's tonnages\n",
+    "; Derive 3 subsets of data:\n",
+    ";   * 'recent'  - 2018's tonnage of waste generated per council citizen\n",
+    ";   * 'average' - 2011-2018's average tonnage of waste generated per council citizen\n",
+    ";   * 'trend'   - 2011-2018's difference in tonnage of waste generated per council citizen\n",
     "\n",
-    "(def tonnage-generated-per-council-citizen-in-2018\n",
-    "    (filter #(= \"2018\" (:year %))\n",
-    "            tonnage-generated-per-council-citizen-per-year))\n",
+    "(def tonnage-generated-per-council-citizen-based\n",
+    "    (let [base-data tonnage-generated-per-council-citizen-per-year]\n",
+    "        (for [council (->> base-data (map :council) distinct)]\n",
+    "            {:council council\n",
+    "             :recent (->> base-data \n",
+    "                         (filter #(and (= council (:council %)) (= \"2018\" (:year %)))) \n",
+    "                         first \n",
+    "                         :tonnagePerCitizen)\n",
+    "             :average (->> base-data \n",
+    "                         (filter #(= council (:council %))) \n",
+    "                         (map :tonnagePerCitizen)\n",
+    "                         (map bigdec)\n",
+    "                         (apply +) \n",
+    "                         (#(/ % 8)))\n",
+    "              :trend ;; TODO: maybe compute the Ordinary Least Squares coefficient\n",
+    "                     ;; but compute a simple subtraction for now\n",
+    "                     (- (->> base-data \n",
+    "                             (filter #(and (= council (:council %)) (= \"2018\" (:year %)))) \n",
+    "                             first \n",
+    "                             :tonnagePerCitizen\n",
+    "                             bigdec)\n",
+    "                        (->> base-data \n",
+    "                             (filter #(and (= council (:council %)) (= \"2011\" (:year %)))) \n",
+    "                             first \n",
+    "                             :tonnagePerCitizen\n",
+    "                             bigdec))})))\n",
     "            \n",
-    "(println (count tonnage-generated-per-council-citizen-in-2018) \"rows\")"
+    "(println (count tonnage-generated-per-council-citizen-based) \"rows\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 135,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "|          :council | :councilCode | :year |         :tonnagePerCitizen |\n",
-      "|-------------------+--------------+-------+----------------------------|\n",
-      "|     East Ayrshire |    S12000008 |  2018 | 0.436211424819435325016415 |\n",
-      "| North Lanarkshire |    S12000050 |  2018 | 0.429698982891410429772473 |\n",
-      "|          Highland |    S12000017 |  2018 | 0.542922645835102318077609 |\n",
-      "|      East Lothian |    S12000010 |  2018 | 0.473901124870025522261083 |\n",
-      "|             Moray |    S12000020 |  2018 | 0.497508375209380234505863 |\n"
+      "|          :council |                    :recent |                      :average |                      :trend |\n",
+      "|-------------------+----------------------------+-------------------------------+-----------------------------|\n",
+      "| East Renfrewshire | 0.461563517915309446254072 | 0.492373234778840765744668375 | -0.036079913424851328990945 |\n",
+      "|    Orkney Islands | 0.460612888688598467778279 | 0.470190287581728018161481625 | -0.018145281246042055097538 |\n",
+      "|      East Lothian | 0.473901124870025522261083 |  0.49911582824953486857742025 | -0.058154519645586967730911 |\n",
+      "| North Lanarkshire | 0.429698982891410429772473 | 0.457329635901437797113742625 | -0.044794680498379929104703 |\n",
+      "|       Dundee City |  0.40855798319327731092437 |  0.44217890463213453189780425 | -0.055898538545853123858239 |\n"
      ]
     },
     {
@@ -238,7 +266,7 @@
        "nil"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,19 +274,20 @@
    "source": [
     "; Print a sample\n",
     "\n",
-    "(pp/print-table ks (repeatedly 5 #(rand-nth tonnage-generated-per-council-citizen-in-2018)))"
+    "(def ks [:council :recent :average :trend])\n",
+    "(pp/print-table ks (repeatedly 5 #(rand-nth tonnage-generated-per-council-citizen-based)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to /Users/amc/workspace/data-commons-scotland/dcs-shorts/choropleth-generation/tonnage-generated-per-council-citizen-in-2018.csv\n"
+      "Wrote to /Users/amc/workspace/data-commons-scotland/dcs-shorts/choropleth-generation/tonnage-generated-per-council-citizen-based.csv\n"
      ]
     },
     {
@@ -267,22 +296,22 @@
        "nil"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; Store the 2018 tonnages in a CSV file for subsequent use by the Vega chart\n",
+    "; Store tonnage-generated-per-council-citizen-based in a CSV file for subsequent use by the Vega chart\n",
     "\n",
-    "(def filename \"tonnage-generated-per-council-citizen-in-2018.csv\")\n",
+    "(def filename \"tonnage-generated-per-council-citizen-based.csv\")\n",
     "\n",
     "(let [file (io/file filename)\n",
-    "      header-row (->> tonnage-generated-per-council-citizen-in-2018\n",
+    "      header-row (->> tonnage-generated-per-council-citizen-based\n",
     "                      first\n",
     "                      keys\n",
     "                      (map name))\n",
-    "      data-rows (->> tonnage-generated-per-council-citizen-in-2018\n",
+    "      data-rows (->> tonnage-generated-per-council-citizen-based\n",
     "                     (map vals))]\n",
     "    (with-open [writer (io/writer file)]\n",
     "      (csv/write-csv writer (cons header-row data-rows)))\n",
@@ -292,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -300,8 +329,8 @@
      "output_type": "stream",
      "text": [
       "to-format: :html\n",
-      "[I 10:10:57.316 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/77ff2691-c815-4844-86e9-558790f576543235006439632792951.vl.json\n",
-      "[I 10:10:57.317 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/b9b3a665-a650-4604-b8dc-6dc6ca43ae084578675571710206040.png\n"
+      "[I 16:26:52.184 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/9dfcce6d-8644-4a0d-8002-e5f177ea02bb7040976134973307118.vl.json\n",
+      "[I 16:26:52.191 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/607c77a6-dbcf-473b-a4d2-2cd5aae261e22047451304767038196.png\n"
      ]
     },
     {
@@ -309,7 +338,7 @@
       "text/html": [
        "\n",
        "  <div>\n",
-       "    <div id='uuid-bc400b47-f141-4134-a713-be828ac67853'></div>\n",
+       "    <div id='uuid-4ae6c36a-6e40-453a-a6a7-cf557ff10b6a'></div>\n",
        "    <script>\n",
        "    requirejs.config({\n",
        "      baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -321,8 +350,8 @@
        "      }\n",
        "    });\n",
        "    require(['vega-embed'], function(vegaEmbed) {\n",
-       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"width\":\"600\",\"height\":\"600\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/tonnage-generated-per-council-citizen-in-2018.csv\"},\"key\":\"council\",\"fields\":[\"tonnagePerCitizen\"]}}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"title\":\"tonnage per citizen\",\"field\":\"tonnagePerCitizen\",\"type\":\"quantitative\"}],\"color\":{\"title\":\"tonnage per citizen\",\"field\":\"tonnagePerCitizen\",\"type\":\"quantitative\"}}};\n",
-       "      vegaEmbed('#uuid-bc400b47-f141-4134-a713-be828ac67853', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 change in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"500\",\"height\":\"500\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/tonnage-generated-per-council-citizen-based.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 change in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
+       "      vegaEmbed('#uuid-4ae6c36a-6e40-453a-a6a7-cf557ff10b6a', spec, {defaultStyle:true}).catch(console.warn);\n",
        "      }, function(err) {\n",
        "      console.log('Failed to load');\n",
        "    });\n",
@@ -331,7 +360,7 @@
        "    "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,27 +371,31 @@
     "(def repo-dir \"https://raw.githubusercontent.com/data-commons-scotland/dcs-shorts/topojson-experiment/choropleth-generation/\")\n",
     "\n",
     "(def chart-spec {:$schema \"https://vega.github.io/schema/vega-lite/v4.json\"\n",
-    "                 :width \"600\"\n",
-    "                 :height \"600\"\n",
-    "                 :data {:url (str repo-dir \"topo_lad.json\")\n",
-    "                        :format {:type \"topojson\"\n",
-    "                                 :feature \"lad\"}}\n",
-    "                 :transform [;; Cross reference by council name rather than council code\n",
-    "                             ;; because the topoJSON data uses some obsolete codes (etc.).\n",
-    "                             {:lookup \"properties['LAD13NM']\" \n",
-    "                              :from {:data {:url (str repo-dir filename)}\n",
-    "                                     :key \"council\"\n",
-    "                                     :fields [\"tonnagePerCitizen\"]}}]\n",
-    "                 :projection {:type \"albers\" \n",
-    "                              :rotate [0, 0, 0]}\n",
-    "                 :mark {:type \"geoshape\"\n",
-    "                        :strokeWidth 0.2\n",
-    "                        :stroke \"black\"}\n",
-    "                 :encoding {:tooltip [{:title \"council\" :field \"properties['LAD13NM']\" :type \"nominal\"}\n",
-    "                                      {:title \"tonnage per citizen\" :field \"tonnagePerCitizen\" :type \"quantitative\"}]\n",
-    "                            :color {:title \"tonnage per citizen\"\n",
-    "                                    :field \"tonnagePerCitizen\"\n",
-    "                                    :type \"quantitative\"}}})\n",
+    "                 :repeat {:row [\"2018 tonnage\" \n",
+    "                                \"2011-2018 average tonnage\"\n",
+    "                                \"2011-2018 change in tonnage\"]}\n",
+    "                 :resolve {:scale {:color \"independent\"}}\n",
+    "                 :spec {\n",
+    "                     :width \"500\"\n",
+    "                     :height \"500\"\n",
+    "                     :data {:url (str repo-dir \"topo_lad.json\")\n",
+    "                            :format {:type \"topojson\" :feature \"lad\"}}\n",
+    "                     :transform [;; Cross reference by council name rather than council code\n",
+    "                                 ;; because the topoJSON data uses some obsolete codes (etc.).\n",
+    "                                 {:lookup \"properties['LAD13NM']\" \n",
+    "                                  :from {:data {:url (str repo-dir filename)}\n",
+    "                                         :key \"council\"\n",
+    "                                         :fields [\"recent\" \"average\" \"trend\"]}\n",
+    "                                  :as [\"2018 tonnage\" \n",
+    "                                       \"2011-2018 average tonnage\"\n",
+    "                                       \"2011-2018 change in tonnage\"]}]\n",
+    "                     :projection {:type \"albers\" :rotate [0, 0, 0]}\n",
+    "                     :mark {:type \"geoshape\" :strokeWidth 0.2 :stroke \"black\"}\n",
+    "                     :encoding {:tooltip [{:title \"council\" :field \"properties['LAD13NM']\" :type \"nominal\"}\n",
+    "                                          {:field {:repeat \"row\"} :type \"quantitative\"}]\n",
+    "                                :color {;:title \"tonnage per citizen\"\n",
+    "                                        :field {:repeat \"row\"}\n",
+    "                                        :type \"quantitative\"}}}})\n",
     "\n",
     "; (print (json/write-str chart-spec))\n",
     "\n",
